Initial coetzee changes

--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -1,6 +1,6 @@
-::ng-deep .mat-expansion-panel{
+::ng-deep .mat-expansion-panel {
     background-color: transparent !important;
-    border: 2px solid rgba(232, 225, 209) !important;
+    border: 2px solid #a6686a !important;
 }
 
 ::ng-deep .mat-expansion-panel-header {
@@ -13,20 +13,24 @@
     min-height: 48px;
 }
 
-::ng-deep .mat-expansion-panel-body{
+::ng-deep .mat-expansion-panel-body {
     padding: 0.75rem !important;
-    border-top: 1px dashed #e8e1d1;
+    border-top: 1px dashed #a6686a;
+}
+
+::ng-deep .mat-expansion-panel:not(.mat-expanded):not([aria-disabled="true"]) .mat-expansion-panel-header:hover {
+    background: #D4BAB5 !important;
 }
 
 .expansion-panel-header-row {
     width: 100%;
 }
 
-.expansion-panel-icon{
+.expansion-panel-icon {
     height: 40px !important;
     width: 40px !important;
     font-size: 40px !important;
-    color: #e8e1d1;
+    color: #a6686a;
     vertical-align: middle;
     transition: 0.5s;
 }
