--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -36,7 +36,7 @@
     height: 100%;
     margin-left: auto !important;
     margin-right: auto !important;
-    background-color: #e8e1d1;
+    background-color: #A6686A;
 }
 
 .center-schedule-line-item {
@@ -45,7 +45,7 @@
     margin-left: auto !important;
     margin-right: auto !important;
     margin-top: -135px !important;
-    background-color: #e8e1d1;
+    background-color: #A6686A;
     border-radius: 50%;
 }
 
