--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="mx-auto mt-6" [ngClass]="isMobileView ? 'mobile-names-container' : 'names-container'">
-    <h1 class="pt-6 pb-3 text-center">Vicky</h1>
+    <h1 class="pt-6 pb-3 text-center">Ellouise</h1>
     <div class="row">
         <div class="col my-auto">
             <div class="name-line"></div>
@@ -25,32 +25,32 @@
     <h1 class="pt-3 pb-6 text-center">Andre</h1>
 </div>
 
-<p class="text-center my-6 text-size-22">July 27, 2024</p>
+<p class="text-center my-6 text-size-22">February 28, 2026</p>
 
 <div class="row pt-4">
     <div class="col-auto mx-auto text-center">
         <div class="row justify-content-center">
             <div class="col-auto">
-                <p class="text-size-22">Time till <b>#Kok-Bruilof</b></p>
+                <p class="text-size-22">Time till <b>#Coetzee-Bruilof</b></p>
             </div>
         </div>
 
 
         <div class="row mt-4">
             <div class="col-auto text-center mx-4">
-                <p class="text-size-22" [innerHTML]="displayDays"></p>
+                <p class="text-size-22" [innerHTML]="days"></p>
                 <p class="text-size-18">Days</p>
             </div>
             <div class="col-auto text-center mx-4">
-                <p class="text-size-22" [innerHTML]="displayHours"></p>
+                <p class="text-size-22" [innerHTML]="hours"></p>
                 <p class="text-size-18">Hours</p>
             </div>
             <div class="col-auto text-center mx-4">
-                <p class="text-size-22" [innerHTML]="displayMinutes"></p>
+                <p class="text-size-22" [innerHTML]="minutes"></p>
                 <p class="text-size-18">Minutes</p>
             </div>
             <div class="col-auto text-center mx-4">
-                <p class="text-size-22" [innerHTML]="displaySeconds"></p>
+                <p class="text-size-22" [innerHTML]="seconds"></p>
                 <p class="text-size-18">Seconds</p>
             </div>
         </div>
