--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -3,7 +3,7 @@
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
-    // border: 2px solid #e8e1d1;
+    // border: 2px solid #A6686A;
     // border-radius: 30px;
     // box-sizing: border-box;
 }
@@ -13,25 +13,25 @@
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
-    // border: 2px solid #e8e1d1;
+    // border: 2px solid #A6686A;
     // border-radius: 30px;
     // box-sizing: border-box;
 }
 
 .image-1 {
-    background-image: url('../../../assets/images/home-page/home-page-1.jpeg');
+    background-image: url('../../../assets/images/home-page/new-home-page-1.jpg');
 }
 
 .image-2 {
-    background-image: url('../../../assets/images/home-page/home-page-2.jpeg');
+    background-image: url('../../../assets/images/home-page/new-home-page-2.jpg');
 }
 
 .image-3 {
-    background-image: url('../../../assets/images/home-page/home-page-3.jpeg');
+    background-image: url('../../../assets/images/home-page/new-home-page-3.jpg');
 }
 
 .image-4 {
-    background-image: url('../../../assets/images/home-page/home-page-4.jpeg');
+    background-image: url('../../../assets/images/home-page/new-home-page-4.jpg');
 }
 
 .names-container {
@@ -45,6 +45,6 @@
 .name-line {
     width: 100%;
     height: 4px;
-    background-color: #e8e1d1;
+    background-color: #A6686A;
     margin-bottom: 16px;
 }
