--- a/src/app/components/rsvp-status/rsvp-status.component.scss
+++ b/src/app/components/rsvp-status/rsvp-status.component.scss
@@ -1,12 +1,12 @@
 table {
     border-collapse: collapse;
     width: 100%;
-    border: 1px solid #e8e1d1;
+    border: 1px solid #A6686A;
     border-radius: 20PX;
 }
 
 th {
-    border-bottom: 5px double #e8e1d1;
+    border-bottom: 5px double #A6686A;
     text-align: left;
     padding: 12px;
     font-weight: bold;
@@ -14,7 +14,7 @@ th {
 }
 
 td {
-    border-bottom: 2px solid #e8e1d1;
+    border-bottom: 2px solid #A6686A;
     text-align: left;
     padding: 12px;
     // font-weight: bold;
