--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -5,11 +5,11 @@
 .header-bottom-border {
     width: 100%;
     height: 4px;
-    background-color: #e8e1d1;
+    background-color: #A6686A;
 }
 
 .active-nav-link {
-    border: 1px solid #e8e1d1 !important;
+    border: 1px solid #A6686A !important;
     border-radius: 6px;
 }
 
@@ -22,20 +22,22 @@
     margin: 0 auto -81px;
     min-width: 1250px !important;
     width: 100%;
-    background-image: url('../../../assets/images/thin-wood-background.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    // background-image: url('../../../assets/images/thin-wood-background.png');
+    // background-size: cover;
+    // background-position: center;
+    // background-repeat: no-repeat;
+    background-color: #D4BAB5;
 }
 
 .main-mobile-container {
     height: 100% !important;
     margin: 0 auto -81px;
     width: 100%;
-    background-image: url('../../../assets/images/thin-wood-background.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    // background-image: url('../../../assets/images/thin-wood-background.png');
+    // background-size: cover;
+    // background-position: center;
+    // background-repeat: no-repeat;
+    background-color: #D4BAB5;
 }
 
 .content-container {
