--- a/src/app/components/wedding-party/wedding-party.component.scss
+++ b/src/app/components/wedding-party/wedding-party.component.scss
@@ -1,6 +1,6 @@
 .participent-container {
     border-radius: 25%;
-    box-shadow: 5px 10px 18px #e8e1d1;
+    box-shadow: 5px 10px 18px #A6686A;
     width: 170px;
     margin-bottom: 3rem;
 
