--- a/src/app/components/our-story/our-story.component.html
+++ b/src/app/components/our-story/our-story.component.html
@@ -1,6 +1,6 @@
 <!-- <h1 class="my-6 pb-6 text-center">Our story</h1> -->
 
-<div class="mt-6">
+<!-- <div class="mt-6">
   <div *ngFor="let timelineItem of timelineList; let i = index; let first = first; let last = last"
     [ngClass]="{'pb-6': last, 'mx-6': !isMobileView}">
     <div class="justify-content-center" [ngClass]="(i + 1)%2 ? 'row' : 'reverse-row text-right'" style="height: 300px !important">
@@ -20,4 +20,15 @@
       </div>
     </div>
   </div>
+</div> -->
+
+<div class="mx-4">
+<p class="text-size-30 mt-3 text-bold">Our Love Story</p>
+
+<p class="text-size-30 mt-5 ">On August 31, 2019, fate brought André and Ellouise together, sparking a journey filled with love and unexpected joy. André, a bachelor at the time and Ellouise, a devoted single mother to two wonderful children, found in each other a connection that grew into something extraordinary. What began as a unexpected meeting soon deepened into a heartfelt bond...</p>
+
+<p class="text-size-30 mt-5 ">On June 1, 2024, under a glowing sunset aboard a yacht, André made a moment to last a lifetime. Surrounded by the beauty of the sea and sky, he proposed to Ellouise, sealing their love with a ring and a promise of forever.</p>
+
+<p class="text-size-30 mt-5 ">Now, as we continue to write our story together, we invite you to join us in celebrating the next chapter.</p>
 </div>
+
