--- a/src/app/components/venue/venue.component.html
+++ b/src/app/components/venue/venue.component.html
@@ -4,12 +4,13 @@
     <div class="row">
         <div class="col-4 venue-image image-1"></div>
         <div class="col-4 venue-image image-2"></div>
-        <div class="col-4 venue-image image-3"></div>
+        <!-- <div class="col-4 venue-image image-3"></div> -->
     </div>
     <div class="row">
+        <div class="col-4 venue-image image-3"></div>
         <div class="col-4 venue-image image-4"></div>
-        <div class="col-4 venue-image image-5"></div>
-        <div class="col-4 venue-image image-6"></div>
+        <!-- <div class="col-4 venue-image image-5"></div>
+        <div class="col-4 venue-image image-6"></div> -->
     </div>
 </div>
 
@@ -22,16 +23,16 @@
         <div class="col-6 venue-image image-3"></div>
         <div class="col-6 venue-image image-4"></div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-6 venue-image image-5"></div>
         <div class="col-6 venue-image image-6"></div>
-    </div>
+    </div> -->
 </div>
 
 
 <div class="my-6 pb-6 mx-auto width-fit-content">
     <a class="" target="_blank"
-        href="https://www.google.com/maps/place/Treedom+Villas+%26+Vardos+Wilderness/@-33.9964232,22.6507175,17z/data=!4m10!3m9!1s0x1e78a74fc7b239e9:0x6ac4b78561b8caee!5m3!1s2024-02-28!4m1!1i2!8m2!3d-33.9964277!4d22.6532924!16s%2Fg%2F11gyxffdvn?entry=ttu">
+        href="https://www.google.com/maps/place/De+Oude+CAAB+Country+House/@-33.8354015,18.6461106,17z/data=!3m1!4b1!4m6!3m5!1s0x1dcc5715cbf223f3:0x85c90b5a02b0dbf!8m2!3d-33.8354015!4d18.6461106!16s%2Fg%2F1pzq5_vqc?entry=ttu&g_ep=EgoyMDI1MDkyOS4wIKXMDSoASAFQAw%3D%3D">
         <div [ngClass]="isMobileView ? 'mobile-google-maps-image' : 'google-maps-image'" class="mx-auto"></div>
     </a>
 </div>
