--- a/src/app/components/venue/venue.component.html
+++ b/src/app/components/venue/venue.component.html
@@ -36,3 +36,9 @@
         <div [ngClass]="isMobileView ? 'mobile-google-maps-image' : 'google-maps-image'" class="mx-auto"></div>
     </a>
 </div>
+
+<div class="mx-4">
+<p class="text-size-45 mt-3 text-bold">Notice on drinks</p>
+
+<p class="text-size-30 mb-5 ">The venue allows for own drinks. Please bring your own drinks and mixes in a neatly compacted cooler bag etc. Ice and glasses will be provided, designated area will be available to store your cooler bag. We request that no large cooler bags/boxes be brought, and please label your cooler bags or bottles. Champagne will be available on the tables for toasting.</p>
+</div>
