--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <!-- <div class="col-4 home-image-banner image-2"></div>
     <div class="col-4 home-image-banner image-3"></div> -->
 
-    <img class="full-page-image" src="../../../assets/images/home-page/full-page-home-image.jpeg" alt="">
+    <img class="full-page-image" src="assets/images/home-page/full-page-home-image.jpeg" alt="">
 </div>
 
 <div *ngIf="isMobileView" class="row">
@@ -12,7 +12,7 @@
     <!-- <div class="col-6 mobile-home-image-banner image-3"></div>
     <div class="col-6 mobile-home-image-banner image-4"></div> -->
 
-    <img class="mobile-full-page-image" src="../../../assets/images/home-page/full-page-home-image.jpeg" alt="">
+    <img class="mobile-full-page-image" src="assets/images/home-page/full-page-home-image.jpeg" alt="">
 </div>
 
 <!-- <div class="mx-auto mt-6" [ngClass]="isMobileView ? 'mobile-names-container' : 'names-container'">
