--- a/src/app/components/rsvp-status/rsvp-status.component.html
+++ b/src/app/components/rsvp-status/rsvp-status.component.html
@@ -21,11 +21,11 @@
     </tr>
       <tr *ngFor="let user of fullWeddingPartyList">
     <ng-container class="container-style" *ngIf="statusFilterGroup === 'all' || (statusFilterGroup === 'none' && !user.rsvpStatus) || (statusFilterGroup !== 'all' && statusFilterGroup !== 'none' && statusFilterGroup === user.rsvpStatus)">
-        <td class="text-capitilize">{{ user.firstName }}</td>
-        <td class="text-capitilize">{{ user.lastName }}</td>
-        <td class="text-capitilize">{{ user.rsvpUpdateDate | date:'mediumDate' }}</td>
-        <td class="text-capitilize" [ngClass]="{'error-text': user.rsvpStatus === 'declined'}">{{ user.rsvpStatus }}</td>
-        <td class="text-capitilize">{{ user.nightsAccommodation }}</td>
+        <td class="text-capitilize">{{ user.name }}</td>
+        <td class="text-capitilize">{{ user.surname }}</td>
+        <!-- <td class="text-capitilize">{{ user.rsvpUpdateDate | date:'mediumDate' }}</td> -->
+        <!-- <td class="text-capitilize" [ngClass]="{'error-text': user.rsvpStatus === 'declined'}">{{ user.rsvpStatus }}</td> -->
+        <!-- <td class="text-capitilize">{{ user.nightsAccommodation }}</td> -->
         <!-- <td *ngIf="!isMobileView" class="text-lowercase">https://kokandre.github.io/kok-wedding-invitation/{{ user.firstName }}-{{ user.lastName }}</td> -->
     </ng-container>
       </tr>
