--- a/src/app/components/rsvp/rsvp.component.html
+++ b/src/app/components/rsvp/rsvp.component.html
@@ -1,74 +1,114 @@
-<div class="col-12 w-100 justify-content-center mt-6">
-    <h1 class="text-capitilize text-center">Hello {{ userData.firstName }} {{userData.lastName}}</h1>
+<div [hidden]="displayRsvpStatusPage">
+    <p class="text-size-30">Lets capture your details:</p>
+
+    <div [formGroup]="rsvpFormGroup">
+        <div class="row justify-content-center mx-3">
+            <mat-form-field class="col-12 px-0">
+                <mat-label>Name</mat-label>
+                <input style="color: black;" matInput required maxlength="50" formControlName="nameControl">
+            </mat-form-field>
+        </div>
+
+        <div class="row justify-content-center mx-3">
+            <mat-form-field class="col-12 px-0">
+                <mat-label>Surname</mat-label>
+                <input style="color: black;" matInput required maxlength="50" formControlName="surnameControl">
+            </mat-form-field>
+        </div>
+
+        <div class="row justify-content-center">
+            <button mat-raised-button class="mx-auto text-size-22"
+                [disabled]="!nameControl.value || !surnameControl.value" (click)="searchUser()">Search</button>
+        </div>
+    </div>
+
+    <p class="text-size-22 red-text mx-3 mt-5 text-center" *ngIf="searchErrorMessage">{{ searchErrorMessage }}</p>
+
+    <div class="mt-5" *ngIf="selectedUserDetails?.id">
+
+        <div *ngIf="selectedUserDetails.rsvpDate">
+            <p class="text-size-30 text-center">On <span>{{ selectedUserDetails.rsvpDate| date:'mediumDate' }}</span>
+                you RSVP'd:
+                <span class="text-capitilize">{{ selectedUserDetails.rsvpStatus }}{{ selectedUserDetails.plusOneAllowed
+                    ? (selectedUserDetails.plusOneRSVStatus?.toLowerCase() === 'accepted' ? ' (Plus one)' : '') : ''
+                    }}</span>.
+            </p>
+
+            <div *ngIf="!displayCaptureRSVP" class="row justify-content-center pt-6">
+                <button mat-raised-button class="mx-auto text-size-22" (click)="displayCaptureRSVP = true">Change
+                    RSVP</button>
+            </div>
+        </div>
+
+        <div *ngIf="!selectedUserDetails.rsvpDate" class="mt-6">
+            <p class="text-size-30 text-center mb-0">You have not RSVP'd yet</p>
+
+            <div *ngIf="!displayCaptureRSVP" class="row justify-content-center pt-6">
+                <button mat-raised-button class="mx-auto text-size-22" (click)="displayCaptureRSVP = true">RSVP</button>
+            </div>
+        </div>
+
+        <div *ngIf="displayCaptureRSVP">
+            <p class="text-size-30 mt-5 mx-3">RSVP Status</p>
+
+            <mat-radio-group class="col-12" [(ngModel)]="rsvpStatus">
+                <mat-radio-button class="mr-6" value="accepted">
+                    <p class="mb-0 text-size-30">Accept</p>
+                </mat-radio-button>
+                <mat-radio-button value="declined">
+                    <p class="mb-0 text-size-30">Decline</p>
+                </mat-radio-button>
+            </mat-radio-group>
+
+            <div *ngIf="selectedUserDetails.plusOneAllowed">
+                <p class="text-size-30 mt-5 mx-3">You are allowed a plus one. Please RSVP for your plus one</p>
+
+                <mat-radio-group class="col-12" [(ngModel)]="plusOneRsvpStatus">
+                    <mat-radio-button class="mr-6" value="accepted">
+                        <p class="mb-0 text-size-30">Accept</p>
+                    </mat-radio-button>
+                    <mat-radio-button value="declined">
+                        <p class="mb-0 text-size-30">Decline</p>
+                    </mat-radio-button>
+                </mat-radio-group>
+            </div>
+
+            <div class="row justify-content-center pt-6">
+                <button mat-raised-button class="mx-auto text-size-22"
+                    [disabled]="!rsvpStatus || (selectedUserDetails.plusOneAllowed && !plusOneRsvpStatus)"
+                    (click)="submitRSVPStatus()">Submit</button>
+            </div>
+
+            <p class="text-size-22 red-text mx-3 mt-5 text-center" *ngIf="submitErrorMessage">{{ submitErrorMessage }}
+            </p>
+        </div>
+
+    </div>
+
+    <div *ngIf="selectedUserDetails?.isAdmin">
+        <div class="row justify-content-center pt-6">
+            <button mat-raised-button class="mx-auto text-size-22" (click)="displayRSVPStatus()">Display RSVP
+                Status</button>
+        </div>
+        <p class="text-size-22 red-text mx-3 mt-5 text-center" *ngIf="getAllUsersErrorMessage">{{ getAllUsersErrorMessage }}
+        </p>
+    </div>
 </div>
 
-<div *ngIf="userData.rsvpUpdateDate" class="mt-6">
-    <h2 class="text-center pt-6">On <span>{{ userData.rsvpUpdateDate| date:'mediumDate' }}</span> you RSVP'd: <span
-            class="text-capitilize">{{ userData.rsvpStatus }}</span>.</h2>
+<div *ngIf="displayRsvpStatusPage">
+  <table class="mb-6">
+    <tr>
+      <th>Name</th>
+      <th>RSVP Status</th>
+    </tr>
+      <tr *ngFor="let user of allUserData">
+        <td class="text-capitilize">{{ user.name }} {{ user.surname }}</td>
+        <td *ngIf="user.rsvpDate">{{ user.rsvpStatus }}{{ user.plusOneAllowed ? (user.plusOneRSVStatus?.toLowerCase() === 'accepted' ? ' (+1:✓)' : ' (+1:X)') : '' }}</td>
+        <td *ngIf="!user.rsvpDate"> </td>
+      </tr>
+  </table>
 
-    <div *ngIf="userData.rsvpStatus !== 'declined'">
-        <h2 *ngIf="userData.nightsAccommodation === '0'" class="text-center pt-6">You selected to arrange your own
-            accommodation.</h2>
-        <h2 *ngIf="userData.nightsAccommodation === '1'" class="text-center pt-6">You selected accommodation for
-            Saturday
-            night only.</h2>
-        <h2 *ngIf="userData.nightsAccommodation === '2'" class="text-center pt-6">You selected accommodation for Friday
-            and
-            Saturday night.</h2>
-    </div>
-
-
-    <div *ngIf="!displayCaptureRSVP" class="row justify-content-center pt-6">
-        <button mat-raised-button class="mx-auto text-size-22" (click)="displayCaptureRSVP = true">Change RSVP</button>
-    </div>
-</div>
-
-<div *ngIf="!userData.rsvpUpdateDate" class="mt-6">
-    <h2 class="text-center pt-6">You have not RSVP'd yet</h2>
-
-    <div *ngIf="!displayCaptureRSVP" class="row justify-content-center pt-6">
-        <button mat-raised-button class="mx-auto text-size-22" (click)="displayCaptureRSVP = true">RSVP</button>
-    </div>
-</div>
-
-<div *ngIf="displayCaptureRSVP" class="pt-6 mx-auto text-center col-12 px-2">
-
-    <h2 class="mt-6">Please set RSVP status:</h2>
-
-    <mat-radio-group class="col-12" [(ngModel)]="rsvpStatus">
-        <mat-radio-button class="mr-6" value="accepted">
-            <p class="mb-0 text-size-30">Accept</p>
-        </mat-radio-button>
-        <mat-radio-button value="declined">
-            <p class="mb-0 text-size-30">Decline</p>
-        </mat-radio-button>
-    </mat-radio-group>
-
-    <div *ngIf="rsvpStatus !== 'declined'">
-        <h2 class="mt-4">Please indicate the evening for which you require
-            accommodation:</h2>
-
-        <mat-radio-group class="col-12" [(ngModel)]="nightsAccommodation">
-            <mat-radio-button class="mr-6" value="0">
-                <p class="mb-0 text-size-30">I will arrange my own</p>
-            </mat-radio-button>
-            <mat-radio-button class="mr-6" value="1">
-                <p class="mb-0 text-size-30">Saturday</p>
-            </mat-radio-button>
-            <mat-radio-button value="2">
-                <p class="mb-0 text-size-30">Friday and Saturday</p>
-            </mat-radio-button>
-        </mat-radio-group>
-    </div>
-
-
-    <div class="row justify-content-center pt-6">
-        <button mat-raised-button class="mx-auto text-size-22" (click)="submitRSVPClicked()">{{ isLoading ? 'Please
-            wait...' : 'Submit'}}</button>
-    </div>
-
-    <h2 *ngIf="displayErrorMessage && !rsvpStatus" class="error-text mt-6"><span class="text-size-30">*</span> Please
-        select an RSVP value!</h2>
-    <h2 *ngIf="displayErrorMessage && !nightsAccommodation" class="error-text mt-6"><span class="text-size-30">*</span> Please
-        select accommodation requirements!</h2>
+          <div class="row justify-content-center py-5">
+            <button mat-raised-button class="mx-auto text-size-22" (click)="hideRSVPStatus()">Return</button>
+        </div>
 </div>
