--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -16,6 +16,11 @@
                     <p class="m-2 text-size-22">Our story</p>
                 </div>
 
+                <div class="pointer transparent-border" (click)="setActiveScreen(availableScreens.BridalParty)"
+                    [ngClass]="{'active-nav-link': activeScreen === availableScreens.BridalParty}">
+                    <p class="m-2 text-size-22">Bridal party</p>
+                </div>
+
                 <div class="pointer transparent-border" (click)="setActiveScreen(availableScreens.Venue)"
                     [ngClass]="{'active-nav-link': activeScreen === availableScreens.Venue}">
                     <p class="m-2 text-size-22">Venue</p>
@@ -24,6 +29,11 @@
                 <div class="pointer transparent-border" (click)="setActiveScreen(availableScreens.Schedule)"
                     [ngClass]="{'active-nav-link': activeScreen === availableScreens.Schedule}">
                     <p class="m-2 text-size-22">Schedule</p>
+                </div>
+
+                <div class="pointer transparent-border" (click)="setActiveScreen(availableScreens.Gifts)"
+                    [ngClass]="{'active-nav-link': activeScreen === availableScreens.Gifts}">
+                    <p class="m-2 text-size-22">Wedding Gift Registry</p>
                 </div>
 
                 <div class="pointer transparent-border" (click)="setActiveScreen(availableScreens.FAQ)"
@@ -41,19 +51,18 @@
                     <p class="m-2 text-size-22">Wedding Party</p>
                 </div> -->
 
-                <div class="pointer transparent-border"
-                    (click)="setActiveScreen(availableScreens.RSVPStatus)"
+                <!-- <div class="pointer transparent-border" (click)="setActiveScreen(availableScreens.RSVPStatus)"
                     [ngClass]="{'active-nav-link': activeScreen === availableScreens.RSVPStatus}">
                     <p class="m-2 text-size-22">RSVP Status</p>
-                </div>
+                </div> -->
             </div>
 
         </div>
         <div *ngIf="isMobileView" class="col-9 mobile-menu-button">
 
             <div class="row justify-content-end align-items-center">
-                <h2 *ngIf="activeScreen !== availableScreens.Home" class="mb-0 screen-title-text">{{ activeScreen }}
-                </h2>
+                <h1 *ngIf="activeScreen !== availableScreens.Home" class="mb-0 screen-title-text">{{ activeScreen }}
+                </h1>
 
 
                 <button class="py-0 pt-1" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
@@ -73,6 +82,12 @@
                     </div>
 
                     <div class="pointer transparent-border" mat-menu-item
+                        (click)="setActiveScreen(availableScreens.BridalParty)"
+                        [ngClass]="{'active-nav-link': activeScreen === availableScreens.BridalParty}">
+                        <p class="m-2 text-size-22">Bridal party</p>
+                    </div>
+
+                    <div class="pointer transparent-border" mat-menu-item
                         (click)="setActiveScreen(availableScreens.Venue)"
                         [ngClass]="{'active-nav-link': activeScreen === availableScreens.Venue}">
                         <p class="m-2 text-size-22">Venue</p>
@@ -82,6 +97,12 @@
                         (click)="setActiveScreen(availableScreens.Schedule)"
                         [ngClass]="{'active-nav-link': activeScreen === availableScreens.Schedule}">
                         <p class="m-2 text-size-22">Schedule</p>
+                    </div>
+
+                    <div class="pointer transparent-border" mat-menu-item
+                        (click)="setActiveScreen(availableScreens.Gifts)"
+                        [ngClass]="{'active-nav-link': activeScreen === availableScreens.Gifts}">
+                        <p class="m-2 text-size-22">Wedding Gift Registry</p>
                     </div>
 
                     <div class="pointer transparent-border" mat-menu-item
@@ -130,6 +151,10 @@
             </ng-container>
             <ng-container *ngSwitchCase="availableScreens.WeddingParty" [ngTemplateOutlet]="WeddingPartyTemplate">
             </ng-container>
+            <ng-container *ngSwitchCase="availableScreens.BridalParty" [ngTemplateOutlet]="BridalPartyTemplate">
+            </ng-container>
+            <ng-container *ngSwitchCase="availableScreens.Gifts" [ngTemplateOutlet]="GiftsTemplate">
+            </ng-container>
             <ng-container *ngSwitchCase="availableScreens.ErrorScreen" [ngTemplateOutlet]="ErrorScreenTemplate">
             </ng-container>
         </ng-container>
@@ -159,11 +184,19 @@
 </ng-template>
 
 <ng-template #WeddingPartyTemplate>
-    <app-wedding-party [weddingPartyList]="fullWeddingPartyList"></app-wedding-party>
+    <app-wedding-party></app-wedding-party>
+</ng-template>
+
+<ng-template #BridalPartyTemplate>
+    <app-wedding-party></app-wedding-party>
+</ng-template>
+
+<ng-template #GiftsTemplate>
+    <app-gifts></app-gifts>
 </ng-template>
 
 <ng-template #RSVPTemplate>
-    <app-rsvp [userData]="activeUserData" [isMobileView]="isMobileView"
+    <app-rsvp [isMobileView]="isMobileView"
         (navigateToErrorScreenEmit)="naviagteToErrorScreen($event)"
         (updateUserDataEmit)="updateUserData($event)"></app-rsvp>
 </ng-template>
