--- a/src/app/components/wedding-party/wedding-party.component.html
+++ b/src/app/components/wedding-party/wedding-party.component.html
@@ -1,11 +1,10 @@
-<h1 class="my-6 pb-6 text-center">Wedding party</h1>
+<div class="mx-4">
 
-<div class="row mt-6">
-    <div *ngFor="let participent of weddingPartyList" class="col-3">
-        <div class="participent-container mx-auto p-4">
-            <div style="background-image: url(assets/images/wedding-party/{{participent.firstName}}-{{participent.lastName}}.jpeg)" class="participent-image mx-auto mb-3"></div>
-            <p class="text-size-18 font-weight-semi-bold text-capitilize text-center">{{participent.firstName}} {{participent.lastName}}</p>
-            <p [innerHTML]="participent.description" class="text-center mb-0 font-style-italic"></p>
-        </div>
+    <div *ngFor="let person of fullBridalList" class="pb-2">
+        <p class="text-size-45 mt-3 text-bold mb-0">{{ person.name }}</p>
+        <p class="text-size-30">{{ person.title }}</p>
+        <p class="text-size-22">{{ person.description }}</p>
     </div>
+
+
 </div>
